--- a/runtime/Cargo.toml
+++ b/runtime/Cargo.toml
@@ -11,13 +11,14 @@ edition = "2018"
 [dependencies]
 auto_impl = "1.0"
 environmental = { version = "1.1.2", default-features = false, optional = true }
-primitive-types = { version = "0.12", default-features = false }
+primitive-types = { version = "0.9", default-features = false }
 sha3 = { version = "0.10", default-features = false }
 
 evm-core = { version = "0.37", path = "../core", default-features = false }
 
 [features]
 default = ["std"]
+tstd    = []
 std = [
 	"environmental/std",
 	"primitive-types/std",
