--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,24 +10,28 @@ edition = "2018"
 
 [dependencies]
 auto_impl = "1.0"
-ethereum = { version = "0.15", default-features = false }
+ethereum = { version = "0.7.1", default-features = false }
+primitive-types = { version = "0.9", default-features = false, features = ["rlp"] }
 log = { version = "0.4", default-features = false }
-primitive-types = { version = "0.12", default-features = false, features = ["rlp"] }
 rlp = { version = "0.5", default-features = false }
 sha3 = { version = "0.10", default-features = false }
+scale-info-derive = "=2.10"
 
 # Optional dependencies
 environmental = { version = "1.1.2", default-features = false, optional = true }
-scale-codec = { package = "parity-scale-codec", version = "3.2", default-features = false, features = ["derive"], optional = true }
-scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
+scale-codec = { package = "parity-scale-codec", version = "3.1.5", default-features = false, features = ["derive"], optional = true }
+scale-info = { version = "2.1.2", default-features = false, features = ["derive"], optional = true }
 serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
 
 evm-core = { version = "0.41", path = "core", default-features = false }
 evm-gasometer = { version = "0.41", path = "gasometer", default-features = false }
 evm-runtime = { version = "0.41", path = "runtime", default-features = false }
 
+
 [dev-dependencies]
-criterion = "0.4"
+criterion = "0.3"
+rayon-core = "=1.10.0"
+csv = "=1.1.6"
 hex = "0.4"
 
 [[bench]]
@@ -38,7 +42,6 @@ harness = false
 default = ["std"]
 std = [
 	"ethereum/std",
-	"log/std",
 	"primitive-types/std",
 	"rlp/std",
 	"sha3/std",
@@ -50,6 +53,7 @@ std = [
 	"evm-gasometer/std",
 	"evm-runtime/std",
 ]
+tstd = []
 with-codec = [
 	"scale-codec",
 	"scale-info",
