--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -10,10 +10,11 @@ edition = "2018"
 
 [dependencies]
 log = { version = "0.4", optional = true }
-primitive-types = { version = "0.12", default-features = false }
-scale-codec = { package = "parity-scale-codec", version = "3.2", default-features = false, features = ["derive", "full"], optional = true }
-scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }
+primitive-types = { version = "0.9", default-features = false }
+scale-codec = { package = "parity-scale-codec", version = "3.1.5", default-features = false, features = ["derive", "full"], optional = true }
+scale-info = { version = "2.1.2", default-features = false, features = ["derive"], optional = true }
 serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
+scale-info-derive = "=2.10"
 
 [dev-dependencies]
 hex = "0.4"
